--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,9 @@ html {
   font-family: 'Roboto', sans-serif;
   color: #333;
 }
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: inherit;
 }
 
@@ -13,17 +15,20 @@ body {
   background: #f7f7f7;
 }
 
-textarea, input[type="text"], input[type="number"] {
+textarea,
+input[type='text'],
+input[type='number'] {
   color: #3d3de6;
   font-family: 'Permanent Marker', cursive;
   font-size: 20px;
 }
 
-input[type="checkbox"] {
+input[type='checkbox'] {
   margin-right: 10px;
 }
 
-p, label {
+p,
+label {
   line-height: 1.6;
 }
 
@@ -43,5 +48,34 @@ label {
   body {
     width: 100%;
     padding: 20px;
+  }
+}
+
+@media print {
+  .no-print,
+  .no-print * {
+    display: none !important;
+  }
+}
+
+.page {
+  margin-top: 30px;
+  padding: 20px;
+  padding-bottom: 100px;
+  padding-top: 30px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  background: white;
+}
+
+@media print {
+  .page {
+    box-shadow: none;
+  }
+  @page {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+  body {
+    /* margin: 1.6cm; */
   }
 }
